--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
   "editor.defaultFormatter": "esbenp.prettier-vscode",
   "editor.formatOnSave": true,
+  "eslint.workingDirectories": ["docs", "."],
   "[typescript]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   }
