--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,30 +2,14 @@
   "$schema": "https://json.schemastore.org/tsconfig",
   "compilerOptions": {
     "target": "ESNext",
-    "types": ["jest"],
+    "outDir": "dist",
     "useDefineForClassFields": true,
     "module": "ESNext",
-    "outDir": "dist",
     "sourceMap": true,
-    "declaration": true,
     "esModuleInterop": true,
-    "moduleResolution": "nodenext"
+    "declaration": true,
+    "moduleResolution": "bundler"
   },
-  // NEW: Options for file/directory watching
-  "watchOptions": {
-    // Use native file system events for files and directories
-    "watchFile": "useFsEvents",
-    "watchDirectory": "useFsEvents",
-    // Poll files for updates more frequently
-    // when they're updated a lot.
-    "fallbackPolling": "dynamicPriority",
-    // Don't coalesce watch notification
-    "synchronousWatchDirectory": true,
-    // Finally, two additional settings for reducing the amount of possible
-    // files to track  work from these directories
-    "excludeDirectories": ["**/node_modules", "_build"],
-    "excludeFiles": ["build/fileWhichChangesOften.ts"]
-  },
-  "include": ["src/**/*.ts"],
+  "include": ["lib/**/*.ts"],
   "exclude": ["**/*.spec.ts"]
 }
