--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -34,7 +34,7 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
-      - run: npm ci
+      - run: npm run docs:install
       - run: npm run docs:build --if-present
       - name: Build with Jekyll
         uses: actions/jekyll-build-pages@v1
